Fix .tablecontainer alignment in RTL mode

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,9 @@
     margin-right: auto;
     text-align: left;
 }
+.path-mod-choicegroup.dir-rtl div.tablecontainer {
+    text-align: right;
+}
 .path-mod-choicegroup div.border {
     border: 1px #ccc solid;
 }
